# k8s-agent-mcp

./: .coveragerc  .env.template  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  async.stuff.py  cluster.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
deploy/: rbac-readonly.yaml
deploy/chaosmesh/: chaosmesg-pod-failure-5m.yaml  chaosmesh-network-delay.yaml  chaosmesh-pod-cpu-stress.yaml  chaosmesh-pod-kill-cron.yaml  chaosmesh-rbac.yaml
deploy/workloads/: blackbox-probe.yaml  test-workload.yaml
docker/: agent.Dockerfile  mcp-server.Dockerfile
scripts/: run_tests.sh
services/agent_chatbot/app/: agent.py
services/mcp_k8s_server/app/: k8s_client.py  prometheus_client.py  server.py
services/mcp_k8s_server/tests/: test_smoke.py
