[project]
name = "k8s-agent-mcp"
version = "0.1.0"
description = "Agentic AI Experimentation in Kubernetes"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "bump-my-version>=1.2.7",
]
lint = [
    "bandit>=1.9.4",
    "ruff>=0.15.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
