[project]
name = "k8s-agent-mcp"
version = "0.1.0"
description = "Agentic AI Experimentation in Kubernetes"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "sec"},
    {include-group = "test"},
    "bump-my-version>=1.2.7",
]
lint = [
    "ruff>=0.15.2",
]
sec = [
    "bandit>=1.9.4",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

# ruff configuration
[tool.ruff]
show-fixes = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
line-length = 120
target-version = "py314"
src = ["services"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
order-by-type = true

# pytest configuration
[tool.pytest.ini_options]
addopts="-ra --tb=short "
# These are clutter
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
    "ignore:datetime.datetime.now:DeprecationWarning"
]

[tool.coverage.run]
source = ["services"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.flake8]
max-line-length=120

# bumpversion configuration
[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} to {new_version}"
allow_dirty = false
message = "bump version: {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""

[[tool.bumpversion.files]]
filename = "Makefile"
search = "VERSION := {current_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "semver-{current_version}-blue"